# music-finetune

./: .gitignore  README.md  best_optuna_params.json  finetune_reward_model.py  generate_preference_dataset.py  model_dimensions.txt  pyproject.toml  report.tex  run_optuna.py  scripts.txt  test_reward_model.py
test_results/: test_results.json  test_results.txt
