[project]
name = "music-finetune"
version = "0.1.0"
description = "MIDI-BERT preference learning pipeline for music reward models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "miditoolkit",
    "torch",
    "transformers",
    "peft",
    "numpy",
    "tqdm",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128", marker = "platform_system == 'Windows'" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
